--- a/biologia.html
+++ b/biologia.html
@@ -12,11 +12,11 @@
     <div  class="encabezado">Tecnologia y Informatica</div>
     <div  class="menu">
     <div class="tecnologia">
-        <a href="tecnologia.html">Tecnologia</a></div>
+        <a href="index.html">Tecnologia</a></div>
     <div class="matematicas">
-        <a href="ingles.html">Ingles</a></div>
+        <a href="index.html">Matematicas</a></div>
     <div class="biologia">
-        <a href="biologia.html">Biologia</a></div>
+        <a href="index.html">Biologia</a></div>
 </div>    
 <div class="contenedor2">
     <div  class="izquierda">
